--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "object-assign": "^4.1.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   }
