--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "react-layout-tmb",
+  "name": "react-layout-vertical",
   "version": "0.1.0",
-  "description": "React component for layout[top/middle/bottom].",
+  "description": "React component for layout[top/middle/bottom] vertical.",
   "author": "afeiship <1290657123@qq.com>",
   "keywords": [
     "components",
-    "react-layout-tmb",
+    "react-layout-vertical",
     "ui",
     "theme"
   ],
   "private": false,
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/afeiship/react-layout-tmb.git"
+    "url": "git+https://github.com/afeiship/react-layout-vertical.git"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/afeiship/react-layout-tmb/issues"
+    "url": "https://github.com/afeiship/react-layout-vertical/issues"
   },
-  "homepage": "https://github.com/afeiship/react-layout-tmb",
+  "homepage": "https://github.com/afeiship/react-layout-vertical",
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js"
   },
-  "main": "./dist/react-layout-tmb.js",
+  "main": "./dist/react-layout-vertical.js",
   "devDependencies": {
     "autoprefixer": "^6.4.0",
     "autoprefixer-loader": "^3.2.0",
